[package]
name = "slow-sleuth"
version = "0.0.0"
edition = "2021"
authors = ["Mostafa Elhemali"]
description = "Library for automatically clustering tracing spans and outputting timing stats for each cluster"

[dependencies]
hdrhistogram = { version = "7" }
itertools = { version = "0" }
tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["std"] }